<resources>
    <string name="app_name">Freight Frenzy</string>
    <string name="register_text">Register a team</string>
    <string name="play_a_game_text">Play a game</string>
    <string name="list_team_score_txt">Registered Teams</string>
    <string name="high_score_txt">High Score</string>
    <string name="about_the_app_txt">About the app</string>
    <string name="app_image_desc">App Image</string>
    <string name="about_title">Every information about the app</string>
    <string name="dev_name">Developer: Henry Nguyen (Quoc Hung Nguyen)</string>
    <string name="student_id">Student ID: 110303395</string>
    <string name="app_category">Category: Utility</string>
    <string name="app_lang">Language: English</string>
    <string name="app_copyright">Copyright: © Henry Nguyen (Quoc Hung Nguyen), Copyright 2021, University of South Australia. All rights reserved</string>
    <string name="app_disclaimer">Disclaimer: This app and all materials in the app is only used for educational purposes.</string>
    <string name="duck">Duck</string>
    <string name="duck_delivered">Duck Delivered</string>
    <string name="parking">Parking</string>
    <string name="in_alliance_storage_unit">In Alliance Storage Unit</string>
    <string name="completely_in_storage_unit">Completely in Storage Unit</string>
    <string name="in_warehouse">In Warehouse</string>
    <string name="completely_in_warehouse">Completely in Warehouse</string>
    <string name="freight">Freight</string>
    <string name="on_alliance_shipping_hub">On Alliance Shipping Hub</string>
    <string name="bonus">Bonus</string>
    <string name="used_duck">Used Duck</string>
    <string name="used_team_scoring_element">Used Team Scoring Element</string>
    <string name="next_stage">Next Stage</string>
    <string name="default_score">0</string>
    <string name="alliance_storage_unit">Alliance Storage Unit</string>
    <string name="alliance_shipping_hub">Alliance Shipping Hub</string>
    <string name="freight_level_1">Freight Level 1</string>
    <string name="freight_level_2">Freight Level 2</string>
    <string name="freight_level_3">Freight Level 3</string>
    <string name="shared_hub">Shared Hub</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="ducks">Ducks</string>
    <string name="finish_the_game">Finish The Game</string>
    <string name="ducks_delivered">Ducks Delivered</string>
    <string name="hubs">Hubs</string>
    <string name="shared_hub_tipped">Shared Hub Tipped</string>
    <string name="shipping_hub_balanced">Shipping Hub Balanced</string>
    <string name="shipping_hub_capped">Shipping Hub Capped</string>
    <string name="warehouse">Warehouse</string>
    <string name="save_score">Save Score</string>
    <string name="submit_high_score">Submit high score</string>
    <string name="game_summary">Game Summary</string>
    <string name="autonomous">Autonomous</string>
    <string name="driver_controlled">Driver Controlled</string>
    <string name="endgame">Endgame</string>
    <string name="total">Total</string>
    <string name="example_num">E.g: 12345</string>
    <string name="example_address">E.g: Adelaide, SA</string>
    <string name="example_robot_name">E.g: EVE</string>
    <string name="team_id">Team ID :</string>
    <string name="location_optional">Location (Hold and drag the marker to change) :</string>
    <string name="robot_name_optional">Robot Name(Optional) :</string>
</resources>